<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme.Overlay.LightText"
    tools:context=".detail.ui.LocationDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapseBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/CollapseToolbarTheme"
            app:collapsedTitleGravity="center_horizontal"
            app:expandedTitleMarginBottom="50dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/locationPicture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@tools:sample/avatars" />

            <com.google.android.material.appbar.MaterialToolbar
                style="?android:toolbarStyle"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:menu="@menu/location_detail_toolbar_menu" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:layout_collapseMode="parallax">

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/locationRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:rating="3" />

                <TextView
                    android:id="@+id/locationRatingText"
                    style="?textViewBody2Style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="?colorOnPrimary"
                    app:layout_constraintBottom_toBottomOf="@+id/locationRatingBar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/locationRatingBar"
                    app:layout_constraintTop_toTopOf="@+id/locationRatingBar"
                    tools:text="4.1" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?textViewH6Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="28dp"
                android:text="@string/pictures" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/locationDetailPictureRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/location_detail_picture_list_item" />

            <TextView
                style="?textViewH6Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="28dp"
                android:text="@string/about" />

            <TextView
                android:id="@+id/locationDetailAboutText"
                style="?textViewBody1Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="28dp"
                tools:lines="4"
                tools:text="@tools:sample/lorem/random" />

            <include
                android:id="@+id/locationDetailSchedule"
                layout="@layout/location_detail_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="28dp" />

            <TextView
                style="?textViewH6Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="28dp"
                android:text="@string/reviews" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/locationReviewList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="28dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/location_detail_review_list_item" />

            <TextView
                android:id="@+id/seeMoreCommentsText"
                style="?textViewBody2Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="30dp"
                android:drawablePadding="8dp"
                android:gravity="end"
                android:text="@string/more_reviews_click_msg"
                android:textColor="?colorPrimary"
                app:drawableEndCompat="@drawable/ic_next_arrows" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>