...
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone" />

        <TextView
            android:id="@+id/locationDetailPhoneText"
            style="?textViewBody2Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            tools:text="+55 12341324" />
    </LinearLayout>
...
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pin" />

        <TextView
            android:id="@+id/locationDetailAddressText"
            style="?textViewBody2Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            tools:text="Some Avenue" />
    </LinearLayout>
...
