...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Some Place" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/locationDetailsRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:isIndicator="true"
                android:numStars="5"
...
